--- a/AngularJS_Spring_MVC/WebContent/angular-filtrando-dados.html
+++ b/AngularJS_Spring_MVC/WebContent/angular-filtrando-dados.html
@@ -12,52 +12,28 @@
 <script type="text/javascript" src="resources/js/animacaoController.js"></script>
 <script type="text/javascript" src="resources/js/primeiroController.js"></script>
 
-<style type="text/css">
-div {
-	transition: all linear 0.5s;
-	background-color: lightblue;
-	height: 100px;
-	width: 100%;
-	position: relative;
-	top: 0;
-	left: 0;
-}
-
-.ng-hide {
-	height: 0;
-	width: 0;
-	background-color: transparent;
-	top: -200px;
-	left: 200px;
-}
-</style>
-</head>
-
 <body id="corpo">
 
-
-	<h1>
-		Hide the DIV: <input type="checkbox" ng-model="myCheck">
-	</h1>
-	<div ng-hide="myCheck">
+	<div>
+		<label>Pesquisar: <input type="text" ng-model="criteria"></label>
 	</div>
 	
-	<br><br>
-	
-	<input type="text" ng-model="moeda">
-	<h2>Moeda default: {{moeda | currency : "$ "}}</h2>
-	<h2>Moeda Real Brasil: {{moeda | currency: "R$ "}}</h2>
-	
-	<br><br>
-	
-	<div ng-controller="primeiroUserController">
-		<h1>{{primeiro}}</h1>
-	</div>
-	
-	<br><br>
-	
-	<div ng-controller="todosUserController">
-		<h1>{{todos}}</h1>
+	<div  ng-controller="filterController">
+		<table>
+			<thead>
+				<th>Nome</th>
+				<th>Sobrenome</th>
+				<th>Idade</th>
+			</thead>
+			<tbody>
+				<tr ng-repeat="friend in resultado = ( friends | filter:{name:criteria} )">
+					<td>{{friend.name}}</td>
+					<td>{{friend.lastname}}</td>
+					<td>{{friend.age}}</td>
+				</tr>
+			</tbody>
+		</table>
+		<h1>Total de friends: {{resultado.length}}</h1>
 	</div>
 
 </body>
