--- a/AngularJS_Spring_MVC/WebContent/angular-http.html
+++ b/AngularJS_Spring_MVC/WebContent/angular-http.html
@@ -4,9 +4,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 	<title>AngularJS - Http</title>	
-	<script type="text/javascript" src="resources/script/angular.min.js"></script>
-	<script type="text/javascript" src="resources/script/angular-route.js"></script>
-	<script type="text/javascript" src="resources/script/httpController.js"></script>
+	<script type="text/javascript" src="resources/js/angular.min.js"></script>
+	<script type="text/javascript" src="resources/js/angular-route.js"></script>
+	<script type="text/javascript" src="resources/js/httpController.js"></script>
 </head>
 
 <body id="corpo">
