--- a/AngularJS_Spring_MVC/WebContent/filtros.html
+++ b/AngularJS_Spring_MVC/WebContent/filtros.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>AngularJS - Filtros</title>
-	<script type="text/javascript" src="resources/script/angular.min.js"></script>
-	<script type="text/javascript" src="resources/script/angular-route.js"></script>
-	<script type="text/javascript" src="resources/script/filter.js"></script>
+	<script type="text/javascript" src="resources/js/angular.min.js"></script>
+	<script type="text/javascript" src="resources/js/angular-route.js"></script>
+	<script type="text/javascript" src="resources/js/filter.js"></script>
 </head>
 <body id="corpo">
 
