--- a/AngularJS_Spring_MVC/WebContent/index.html
+++ b/AngularJS_Spring_MVC/WebContent/index.html
@@ -1,19 +1,367 @@
 <!DOCTYPE html>
 <html ng-app="loja">
 <head>
-	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-	<title>AngukarJS - Spring - MVC</title>
-	
-	<script type="text/javascript" src="resources/script/angular.min.js"></script>
-	<script type="text/javascript" src="resources/script/angular-route.js"></script>
-	<script type="text/javascript" src="resources/script/controller.js"></script>
-	
+
+<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+
+<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+<meta name="viewport" content="width=device-width" />
+
+<title>AngukarJS - Spring - MVC</title>
+
+<script type="text/javascript" src="resources/js/jquery-1.10.2.js"></script>
+
+<script type="text/javascript" src="resources/js/angular.min.js"></script>
+<script type="text/javascript" src="resources/js/angular-route.js"></script>
+<script type="text/javascript" src="resources/js/angular-resource.js"></script>
+<script type="text/javascript" src="resources/js/angular-animate.js"></script>
+<script type="text/javascript" src="resources/js/angular-locale_pt-br.js"></script>
+
+<script type="text/javascript" src="resources/js/bootstrap-checkbox-radio.js"></script>
+<script type="text/javascript" src="resources/js/bootstrap-notify.js"></script>
+<script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="resources/js/chartist.min.js"></script>
+<script type="text/javascript" src="resources/js/demo.js"></script>
+<script type="text/javascript" src="resources/js/paper-dashboard.js"></script>
+
+<!-- Bootstrap core CSS     -->
+<link href="resources/css/bootstrap.min.css" rel="stylesheet" />
+
+<!-- Animation library for notifications   -->
+<link href="resources/css/animate.min.css" rel="stylesheet" />
+
+<!-- Paper Dashboard core CSS    -->
+<link href="resources/css/paper-dashboard.css" rel="stylesheet" />
+
+<!-- CSS for Demo Purpose, don't include it in your project     -->
+<link href="resources/css/demo.css" rel="stylesheet" />
+
+<!-- Fonts and icons -->
+<link href="resources/css/font-awesome.min.css" rel="stylesheet">
+<link href="resources/css/themify-icons.css" rel="stylesheet">
+
+<script type="text/javascript" src="resources/js/app.js"></script>
+
 </head>
 <body id="corpo">
 
-	<h1>Rota Deep Linking Exemplo</h1>
-	<div ng-view>
-		
+	<div class="wrapper">
+		<div class="sidebar" data-background-color="white" data-active-color="danger">
+			<div class="sidebar-wrapper">
+				<div class="logo">
+					<a href="http://www.creative-tim.com" class="simple-text"> Creative Tim </a>
+				</div>
+
+				<ul class="nav">
+					<li class="active">
+						<a href="dashboard.html"> 
+							<i class="ti-panel"></i>
+							<p>Dashboard</p>
+						</a>
+					</li>
+					<li>
+						<a href="user.html"> 
+							<i class="ti-user"></i>
+							<p>User Profile</p>
+						</a>
+					</li>
+					<li>
+						<a href="table.html"> 
+							<i class="ti-view-list-alt"></i>
+							<p>Table List</p>
+						</a>
+					</li>
+					<li>
+						<a href="typography.html"> 
+							<i class="ti-text"></i>
+							<p>Typography</p>
+						</a>
+					</li>
+					<li>
+						<a href="icons.html"> 
+							<i class="ti-pencil-alt2"></i>
+							<p>Icons</p>
+						</a>
+					</li>
+					<li>
+						<a href="maps.html"> 
+							<i class="ti-map"></i>
+							<p>Maps</p>
+						</a>
+					</li>
+					<li>
+						<a href="notifications.html"> 
+							<i class="ti-bell"></i>
+							<p>Notifications</p>
+						</a>
+					</li>
+					<li class="active-pro">
+						<a href="upgrade.html"> 
+							<i class="ti-export"></i>
+							<p>Upgrade to PRO</p>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="main-panel">
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle">
+							<span class="sr-only">Toggle navigation</span> 
+							<span class="icon-bar bar1"></span> 
+							<span class="icon-bar bar2"></span>
+							<span class="icon-bar bar3"></span>
+						</button>
+						<a class="navbar-brand" href="#">Dashboard</a>
+					</div>
+					<div class="collapse navbar-collapse">
+						<ul class="nav navbar-nav navbar-right">
+							<li>
+								<a href="#" class="dropdown-toggle"	data-toggle="dropdown"> 
+									<i class="ti-panel"></i>
+									<p>Stats</p>
+								</a>
+							</li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle"	data-toggle="dropdown"> 
+									<i class="ti-bell"></i>
+									<p class="notification">5</p>
+									<p>Notifications</p> 
+									<b class="caret"></b>
+								</a>
+								<ul class="dropdown-menu">
+									<li><a href="#">Notification 1</a></li>
+									<li><a href="#">Notification 2</a></li>
+									<li><a href="#">Notification 3</a></li>
+									<li><a href="#">Notification 4</a></li>
+									<li><a href="#">Another notification</a></li>
+								</ul>
+							</li>
+							<li>
+								<a href="#"> 
+									<i class="ti-settings"></i>
+									<p>Settings</p>
+								</a>
+							</li>
+						</ul>
+
+					</div>
+				</div>
+			</nav>
+
+			<div class="content">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-lg-3 col-sm-6">
+							<div class="card">
+								<div class="content">
+									<div class="row">
+										<div class="col-xs-5">
+											<div class="icon-big icon-warning text-center">
+												<i class="ti-server"></i>
+											</div>
+										</div>
+										<div class="col-xs-7">
+											<div class="numbers">
+												<p>Capacity</p>105GB
+											</div>
+										</div>
+									</div>
+									<div class="footer">
+										<hr />
+										<div class="stats">
+											<i class="ti-reload"></i> Updated now
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-sm-6">
+							<div class="card">
+								<div class="content">
+									<div class="row">
+										<div class="col-xs-5">
+											<div class="icon-big icon-success text-center">
+												<i class="ti-wallet"></i>
+											</div>
+										</div>
+										<div class="col-xs-7">
+											<div class="numbers">
+												<p>Revenue</p>$1,345
+											</div>
+										</div>
+									</div>
+									<div class="footer">
+										<hr />
+										<div class="stats">
+											<i class="ti-calendar"></i> Last day
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-sm-6">
+							<div class="card">
+								<div class="content">
+									<div class="row">
+										<div class="col-xs-5">
+											<div class="icon-big icon-danger text-center">
+												<i class="ti-pulse"></i>
+											</div>
+										</div>
+										<div class="col-xs-7">
+											<div class="numbers">
+												<p>Errors</p>23
+											</div>
+										</div>
+									</div>
+									<div class="footer">
+										<hr />
+										<div class="stats">
+											<i class="ti-timer"></i> In the last hour
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-sm-6">
+							<div class="card">
+								<div class="content">
+									<div class="row">
+										<div class="col-xs-5">
+											<div class="icon-big icon-info text-center">
+												<i class="ti-twitter-alt"></i>
+											</div>
+										</div>
+										<div class="col-xs-7">
+											<div class="numbers">
+												<p>Followers</p>+45
+											</div>
+										</div>
+									</div>
+									<div class="footer">
+										<hr />
+										<div class="stats">
+											<i class="ti-reload"></i> Updated now
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card">
+								<div class="header">
+									<h4 class="title">Users Behavior</h4>
+									<p class="category">24 Hours performance</p>
+								</div>
+								<div class="content">
+									<div id="chartHours" class="ct-chart"></div>
+									<div class="footer">
+										<div class="chart-legend">
+											<i class="fa fa-circle text-info"></i> Open 
+											<i class="fa fa-circle text-danger"></i> Click 
+											<i class="fa fa-circle text-warning"></i> Click Second Time
+										</div>
+										<hr>
+										<div class="stats">
+											<i class="ti-reload"></i> Updated 3 minutes ago
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="card">
+								<div class="header">
+									<h4 class="title">Email Statistics</h4>
+									<p class="category">Last Campaign Performance</p>
+								</div>
+								<div class="content">
+									<div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div>
+
+									<div class="footer">
+										<div class="chart-legend">
+											<i class="fa fa-circle text-info"></i> Open 
+											<i class="fa fa-circle text-danger"></i> Bounce 
+											<i class="fa fa-circle text-warning"></i> Unsubscribe
+										</div>
+										<hr>
+										<div class="stats">
+											<i class="ti-timer"></i> Campaign sent 2 days ago
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="card ">
+								<div class="header">
+									<h4 class="title">2015 Sales</h4>
+									<p class="category">All products including Taxes</p>
+								</div>
+								<div class="content">
+									<div id="chartActivity" class="ct-chart"></div>
+
+									<div class="footer">
+										<div class="chart-legend">
+											<i class="fa fa-circle text-info"></i> Tesla Model S 
+											<i class="fa fa-circle text-warning"></i> BMW 5 Series
+										</div>
+										<hr>
+										<div class="stats">
+											<i class="ti-check"></i> Data information certified
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<footer class="footer">
+				<div class="container-fluid">
+					<nav class="pull-left">
+						<ul>
+							<li>
+								<a href="http://www.creative-tim.com"> Creative Tim</a>
+							</li>
+							<li>
+								<a href="http://blog.creative-tim.com"> Blog </a>
+							</li>
+							<li>
+								<a href="http://www.creative-tim.com/license"> Licenses </a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</footer>
+
+		</div>
 	</div>
+
+	<script type="text/javascript">
+    	$(document).ready(function(){
+        	demo.initChartist();
+        	$.notify({
+            	icon: 'ti-gift',
+            	message: "Welcome to <b>Paper Dashboard</b> - a beautiful Bootstrap freebie for your next project."
+            },{
+                type: 'success',
+                timer: 4000
+            });
+
+    	});
+	</script>
+
+	<!-- <h1>Rota Deep Linking Exemplo</h1>
+	<div ng-view></div> -->
 </body>
 </html>
