Atualizando os pacotes do projeto

--- a/AngularJS_Spring_MVC/WebContent/teste/angular-animacao.html
+++ b/AngularJS_Spring_MVC/WebContent/teste/angular-animacao.html
@@ -4,13 +4,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 <title>AngularJS - Recursos</title>
-<script type="text/javascript" src="resources/js/angular.min.js"></script>
-<script type="text/javascript" src="resources/js/angular-route.js"></script>
-<script type="text/javascript" src="resources/js/angular-resource.js"></script>
-<script type="text/javascript" src="resources/js/angular-animate.js"></script>
-<script type="text/javascript" src="resources/js/angular-locale_pt-br.js"></script>
-<script type="text/javascript" src="resources/js/animacaoController.js"></script>
-<script type="text/javascript" src="resources/js/primeiroController.js"></script>
+<script type="text/javascript" src="../resources/js/angular.min.js"></script>
+<script type="text/javascript" src="../resources/js/angular-route.js"></script>
+<script type="text/javascript" src="../resources/js/angular-resource.js"></script>
+<script type="text/javascript" src="../resources/js/angular-animate.js"></script>
+<script type="text/javascript" src="../resources/js/angular-locale_pt-br.js"></script>
+<script type="text/javascript" src="../resources/js/animacaoController.js"></script>
+<script type="text/javascript" src="../resources/js/primeiroController.js"></script>
 
 <style type="text/css">
 div {
