--- a/AngularJS_Spring_MVC/WebContent/teste/angular-form.html
+++ b/AngularJS_Spring_MVC/WebContent/teste/angular-form.html
@@ -4,10 +4,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 	<title>AngularJS - Recursos</title>
-	<script type="text/javascript" src="resources/js/angular.min.js"></script>
-	<script type="text/javascript" src="resources/js/angular-route.js"></script>
-	<script type="text/javascript" src="resources/js/angular-resource.js"></script>
-	<script type="text/javascript" src="resources/js/formController.js"></script>
+	<script type="text/javascript" src="../resources/js/angular.min.js"></script>
+	<script type="text/javascript" src="../resources/js/angular-route.js"></script>
+	<script type="text/javascript" src="../resources/js/angular-resource.js"></script>
+	<script type="text/javascript" src="../resources/js/formController.js"></script>
 </head>
 
 <body id="corpo">
