--- a/AngularJS_Spring_MVC/WebContent/teste/angular-services.html
+++ b/AngularJS_Spring_MVC/WebContent/teste/angular-services.html
@@ -4,9 +4,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 	<title>AngukarJS - Filtros</title>	
-	<script type="text/javascript" src="resources/js/angular.min.js"></script>
-	<script type="text/javascript" src="resources/js/angular-route.js"></script>
-	<script type="text/javascript" src="resources/js/servicesController.js"></script>
+	<script type="text/javascript" src="../resources/js/angular.min.js"></script>
+	<script type="text/javascript" src="../resources/js/angular-route.js"></script>
+	<script type="text/javascript" src="../resources/js/servicesController.js"></script>
 </head>
 
 <body id="corpo">
