--- a/AngularJS_Spring_MVC/WebContent/teste/teste.html
+++ b/AngularJS_Spring_MVC/WebContent/teste/teste.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>AngukarJS - Spring - MVC</title>
-	<script type="text/javascript" src="resources/js/angular.min.js"></script>
-	<script type="text/javascript" src="resources/js/angular-route.js"></script>
-	<script type="text/javascript" src="resources/js/controllerTest.js"></script>
+	<script type="text/javascript" src="../resources/js/angular.min.js"></script>
+	<script type="text/javascript" src="../resources/js/angular-route.js"></script>
+	<script type="text/javascript" src="../resources/js/controllerTest.js"></script>
 	 
 </head>
 <body id="corpo">
