--- a/AngularJS_Spring_MVC/WebContent/teste/Formulario.html
+++ b/AngularJS_Spring_MVC/WebContent/teste/Formulario.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" charset="UTF-8">
 	<title>Formulário</title>
-	<script type="text/javascript" src="resources/js/angular.min.js"></script>
-	<script type="text/javascript" src="resources/js/controller.js"></script>
+	<script type="text/javascript" src="../resources/js/angular.min.js"></script>
+	<script type="text/javascript" src="../resources/js/controller.js"></script>
 </head>
 <body ng-controller="controller as user" id="corpo">
 	<form action="" name="formulario">
