--- a/AngularJS_Spring_MVC/WebContent/teste/angular-dom.html
+++ b/AngularJS_Spring_MVC/WebContent/teste/angular-dom.html
@@ -4,9 +4,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 <title>AngularJS - Select</title>
-<script type="text/javascript" src="resources/js/angular.min.js"></script>
-<script type="text/javascript" src="resources/js/angular-route.js"></script>
-<script type="text/javascript" src="resources/js/domController.js"></script>
+<script type="text/javascript" src="../resources/js/angular.min.js"></script>
+<script type="text/javascript" src="../resources/js/angular-route.js"></script>
+<script type="text/javascript" src="../resources/js/domController.js"></script>
 </head>
 
 <body id="corpo">
