--- a/AngularJS_Spring_MVC/WebContent/cliente/cadastro.html
+++ b/AngularJS_Spring_MVC/WebContent/cliente/cadastro.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
+<h1>Cadastro de Clientes</h1>
+<a href="#clientelist">
+	<p>Lista de clientes</p>
+</a>
 </html>
