--- a/AngularJS_Spring_MVC/WebContent/cliente/cadastro.html
+++ b/AngularJS_Spring_MVC/WebContent/cliente/cadastro.html
@@ -1,7 +1,9 @@
-<html>
+<html ng-app="loja">
+
 <h1>Cadastro de Clientes</h1>
-<a href="#clientelist">
-	<p>Lista de clientes</p>
+
+<a href="#clientelist">Lista de clientes
+	<img alt="Listar" src="resources/img/list.png" border="0">
 </a>
 
 <div class="col-lg-8 col-md-7">
