--- a/AngularJS_Spring_MVC/WebContent/cliente/list.html
+++ b/AngularJS_Spring_MVC/WebContent/cliente/list.html
@@ -2,9 +2,17 @@
 
 <h1>Lista de Clientes</h1>
 
-<a href="#cliente/cadastro">
-	<p>Novo</p>
+<a href="#cliente/cadastro">Novo
+	<img alt="Novo" src="resources/img/add.png" border="0" />
 </a>
+
+<br/>
+
+<label>Filtro: 
+	<input type="text" ng-model="filtro" />
+</label>
+
+<br/>
 
 <div ng-controller="clienteController" ng-init="listarClientes();">
 	<div class="content table-responsive table-full-width">
@@ -18,13 +26,19 @@
 				<th>Editar</th>
 			</thead>
 			<tbody>
-				<tr ng-repeat="cliente in data">
+				<tr ng-repeat="cliente in data | filter:filtro">
 					<td>{{cliente.id}}</td>
 					<td>{{cliente.nome}}</td>
 					<td>{{cliente.endereco}}</td>
 					<td>{{cliente.telefone}}</td>
-					<td> <a href ng-click="removerCliente(cliente.id);">Apagar</a> </td>
-					<td> <a href ng-click="editarCliente(cliente.id);">Editar</a> </td>
+					<td> <a href ng-click="removerCliente(cliente.id);">Apagar
+							<img alt="Remover" src="resources/img/delete.png" border="0" />
+						</a> 
+					</td>
+					<td> <a href ng-click="editarCliente(cliente.id);">Editar
+							<img alt="Editar" src="resources/img/edit.png" border="0" />
+						</a> 
+					</td>
 				</tr>
 			</tbody>
 		</table>
