--- a/AngularJS_Spring_MVC/WebContent/index.html
+++ b/AngularJS_Spring_MVC/WebContent/index.html
@@ -2,7 +2,7 @@
 <html ng-app="loja">
 <head>
 
-<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 
 <link rel="apple-touch-icon" sizes="76x76" href="resources/img/apple-icon.png">
 <link rel="icon" type="image/png" sizes="96x96" href="resources/img/favicon.png">
@@ -39,8 +39,8 @@
 <link href="resources/css/demo.css" rel="stylesheet" />
 
 <!-- Fonts and icons -->
-<link href="resources/css/font-awesome.min.css" rel="stylesheet">
-<link href="resources/css/themify-icons.css" rel="stylesheet">
+<link href="resources/css/font-awesome.min.css" rel="stylesheet" />
+<link href="resources/css/themify-icons.css" rel="stylesheet" />
 
 <script type="text/javascript" src="resources/js/app.js"></script>
 
@@ -48,32 +48,22 @@
 <body id="corpo">
 
 	<div class="wrapper">
-		<div class="sidebar" data-background-color="white" data-active-color="danger">
+		<div class="sidebar" data-background-color="white"
+			data-active-color="danger">
 			<div class="sidebar-wrapper">
 				<ul class="nav">
-					<li class="active">
-						<a href="#clientelist"> 
+					<li class="active"><a href="#clientelist">
 							<p>Clientes</p>
-						</a>
-					</li>
-					<li>
-						<a href="user.html"> 
-							<i class="ti-user"></i>
+					</a></li>
+					<li><a href="user.html"> <i class="ti-user"></i>
 							<p>User Profile</p>
-						</a>
-					</li>
-					<li>
-						<a href="table.html"> 
-							<i class="ti-view-list-alt"></i>
+					</a></li>
+					<li><a href="table.html"> <i class="ti-view-list-alt"></i>
 							<p>Table List</p>
-						</a>
-					</li>
-					<li>
-						<a href="typography.html"> 
-							<i class="ti-text"></i>
+					</a></li>
+					<li><a href="typography.html"> <i class="ti-text"></i>
 							<p>Typography</p>
-						</a>
-					</li>
+					</a></li>
 				</ul>
 			</div>
 		</div>
@@ -85,34 +75,28 @@
 						<a class="navbar-brand" href="#">Home</a>
 					</div>
 					<div class="collapse navbar-collapse">
-						<ul class="nav navbar-nav navbar-right">							
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle"	data-toggle="dropdown">									
-									<p>Cadastros</p> 
-									<b class="caret"></b>
-								</a>
+						<ul class="nav navbar-nav navbar-right">
+							<li class="dropdown"><a href="#" class="dropdown-toggle"
+								data-toggle="dropdown">
+									<p>Cadastros</p> <b class="caret"></b>
+							</a>
 								<ul class="dropdown-menu">
 									<li><a href="#">Notification 1</a></li>
 									<li><a href="#">Notification 2</a></li>
 									<li><a href="#">Notification 3</a></li>
 									<li><a href="#">Notification 4</a></li>
 									<li><a href="#">Another notification</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="#">									
+								</ul></li>
+							<li><a href="#">
 									<p>Sair</p>
-								</a>
-							</li>
+							</a></li>
 						</ul>
 
 					</div>
 				</div>
 			</nav>
 
-			<div class="content" ng-view>
-				
-			</div>
+			<div class="content" ng-view></div>
 
 		</div>
 	</div>
@@ -120,4 +104,16 @@
 	<!-- <h1>Rota Deep Linking Exemplo</h1>
 	<div ng-view></div> -->
 </body>
+
+<script type="text/javascript">
+	$(document).ready(function(){
+    	$.notify({
+            message: "Bem-vindo!!!"
+            },{
+                type: 'success',
+                timer: 2000
+    	});
+
+	});
+</script>
 </html>
