Adicionando estados e cidades

--- a/AngularJS_Spring_MVC/WebContent/cliente/list.html
+++ b/AngularJS_Spring_MVC/WebContent/cliente/list.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
 <html ng-app="loja">
+
+<head>
+	<meta charset="utf-8" />	
+</head>
 
 <h1>Lista de Clientes</h1>
 
@@ -6,10 +11,10 @@
 	<img alt="Novo" src="resources/img/add.png" border="0" />
 </a>
 
-<br/>
-
+<br>
+<br>
 <label>Filtro: 
-	<input type="text" ng-model="filtro" />
+	<input class="form-control border-input" type="text" ng-model="filtro" />
 </label>
 
 <br/>
@@ -20,7 +25,7 @@
 			<thead>
 				<th>ID</th>
 				<th>Nome</th>
-				<th>Endereço</th>
+				<th>EndereÃ§o</th>
 				<th>Telefone</th>
 				<th>Remover</th>
 				<th>Editar</th>
