Adicionando mais recursos no sistema

--- a/AngularJS_Spring_MVC/WebContent/index.html
+++ b/AngularJS_Spring_MVC/WebContent/index.html
@@ -25,22 +25,21 @@
 <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="resources/js/chartist.min.js"></script>
 <script type="text/javascript" src="resources/js/demo.js"></script>
+<script type="text/javascript" src="resources/js/jquery.mask.js"></script>
+<script type="text/javascript" src="resources/js/jquery.mask.min.js"></script>
+<script type="text/javascript" src="resources/js/jquery.maskMoney.js"></script>
+<script type="text/javascript" src="resources/js/jquery-ui.js"></script>
 
 <!-- Bootstrap core CSS     -->
 <link href="resources/css/bootstrap.min.css" rel="stylesheet" />
-
-<!-- Animation library for notifications   -->
 <link href="resources/css/animate.min.css" rel="stylesheet" />
-
-<!-- Paper Dashboard core CSS    -->
 <link href="resources/css/paper-dashboard.css" rel="stylesheet" />
-
-<!-- CSS for Demo Purpose, don't include it in your project     -->
 <link href="resources/css/demo.css" rel="stylesheet" />
 
 <!-- Fonts and icons -->
 <link href="resources/css/font-awesome.min.css" rel="stylesheet" />
 <link href="resources/css/themify-icons.css" rel="stylesheet" />
+<link href="resources/css/jquery-ui.css" rel="stylesheet" />
 
 <script type="text/javascript" src="resources/js/app.js"></script>
 
@@ -55,14 +54,14 @@
 					<li class="active"><a href="#clientelist">
 							<p>Clientes</p>
 					</a></li>
-					<li><a href="user.html"> <i class="ti-user"></i>
-							<p>User Profile</p>
+					<li class="active"><a href="#fornecedorlist">
+							<p>Fornecedor</p>
 					</a></li>
-					<li><a href="table.html"> <i class="ti-view-list-alt"></i>
-							<p>Table List</p>
+					<li class="active"><a href="#livrolist">
+							<p>Livro</p>
 					</a></li>
-					<li><a href="typography.html"> <i class="ti-text"></i>
-							<p>Typography</p>
+					<li class="active"><a href="#/loja/online">
+							<p>Loja online</p>
 					</a></li>
 				</ul>
 			</div>
@@ -76,14 +75,15 @@
 					</div>
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li class="dropdown"><a href="#" class="dropdown-toggle"
+							<li class="dropdown"><a href="/" class="dropdown-toggle"
 								data-toggle="dropdown">
 									<p>Cadastros</p> <b class="caret"></b>
 							</a>
 								<ul class="dropdown-menu">
-									<li><a href="#">Notification 1</a></li>
-									<li><a href="#">Notification 2</a></li>
-									<li><a href="#">Notification 3</a></li>
+									<li><a href="#/cliente/cadastro">Novo Cliente</a></li>
+									<li><a href="#/fornecedor/cadastro">Novo Fornecedor</a></li>
+									<li><a href="#/livro/cadastro">Novo Livro</a></li>
+									<li><a href="#/loja/online">Loja de Livros</a></li>
 									<li><a href="#">Notification 4</a></li>
 									<li><a href="#">Another notification</a></li>
 								</ul></li>
