Adicionando loja online

--- a/AngularJS_Spring_MVC/WebContent/loja/online.html
+++ b/AngularJS_Spring_MVC/WebContent/loja/online.html
@@ -21,7 +21,7 @@
 							<br>
 							<label style="color: blue;">{{livro.valor}}</label>
 							<br>
-							<button type="button" class="btn btn-info btn-fill btn-wd">Adiciona</button>
+							<button type="button" ng-click="addLivro(livro.id);" class="btn btn-info btn-fill btn-wd">Adiciona</button>
 						</div>
 					</div>
 				</div>
