--- a/AngularJS_Spring_MVC/WebContent/loja/online.html
+++ b/AngularJS_Spring_MVC/WebContent/loja/online.html
@@ -8,6 +8,10 @@
 <br />
 <br />
 
+<a ng-click="fecharPedido();">{{carrinhoLivro.length}} Itens no Carrinho 
+	<img alt="Carrinho" title="Carrinho de livro" src="resources/img/cart.png" border="0" height="40px;" width="40px;">
+</a>
+
 <div class="col-lg-9 col-md-8" ng-init="listarLivros(1);">
 	<div class="card">
 		<div class="content">
