--- a/AngularJS_Spring_MVC/WebContent/loja/itensLoja.html
+++ b/AngularJS_Spring_MVC/WebContent/loja/itensLoja.html
@@ -1,18 +1,40 @@
-<!DOCTYPE html>
 <html ng-app="loja">
-
 <head>
-<meta charset="utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-
 <h1>Itens Carrinho</h1>
+ 
 
-<label>Filtro: <input class="form-control border-input" type="text" ng-model="filtro" /></label>
-
+<label>Pesquisar Cliente <input class="form-control" type="text" ng-model="filtroCliente"></label>
+ <button type="button" class="btn btn-info btn-fill btn-wd" ng-click="buscarClienteNome();">Buscar</button>
+ <table class="table table-hover">
+  <tr ng-repeat="cliente in clientesPesquisa">
+  	<td>{{cliente.id}}</td>
+  	<td>{{cliente.nome}}</td>
+  	<td>
+  	 <a href ng-click="adicionarClienteCarrinho(cliente);">Adicionar
+					 <img alt="Adicionar Cliente" title="Adicionar Cliente" 
+					 src="resources/img/add.png" border="0">
+					</a>
+		</td>
+  </tr>
+ </table>
+<br/>
+<br/>
+<br/>
+<br/>
+<label>Cliente</label>
+<input class="form-control" style="max-width: 100px;" ng-model="pedidoObjeto.cliente.id" value="{{pedidoObjeto.cliente.id}}" readonly="readonly" type="text" id="idCliente"/>
 <br>
+<input class="form-control" readonly="readonly" ng-model="pedidoObjeto.cliente.nome" value="{{pedidoObjeto.cliente.nome}}" type="text" id="nomeCliente"/>
 <br>
+<br/>
+<label>Filtro Livros<input class="form-control" type="text" ng-model="filtro"></label>
+<br>
+<br/>
 
-<div ng-controller="lojaController"">
+<div ng-controller="lojaController">
+
 	<div class="content table-responsive table-full-width">
 		<table class="table table-hover">
 			<thead>
@@ -24,23 +46,25 @@
 				<th>Remover</th>
 			</thead>
 			<tbody>
-				<tr ng-repeat="item in itensCarrinho | filter:filtro">
+				<tr ng-repeat="item in itensCarrinho | filter:filtro"> 
 					<td>{{item.livro.id}}</td>
-					<td><img src="{{livro.foto}}" style="width: 80px; height: 100px;" /></td>
+					<td><img src="{{item.livro.foto}}" style="width: 80px; height: 100px"/></td>
 					<td>{{item.livro.titulo}}</td>
-					<td><input type="number" value="{{item.quantidade}}" size="10"/></td>
+					<td> <input type="number" value="{{item.quantidade}}" ng-change="recalculo(item.quantidade, item.livro.id);" ng-model="item.quantidade"/></td>
 					<td>{{item.livro.valor}}</td>
-					<td><a href ng-click="removerLivroCarrinho(item.livro.id);">Apagar
-							<img alt="Remover" src="resources/img/delete.png" border="0" />
+					<td> <a href ng-click="removerLivroCarrinho(item.livro.id);">Apagar
+					 <img alt="Remover" src="resources/img/delete.png" border="0">
 					</a></td>
 				</tr>
 			</tbody>
 		</table>
-		<h1>Valor total: {{pedidoObjeto.valorTotal}}</h1>
-		<div class="text-center">
-			<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="anterior();">Anterior</button>
-			<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="proximo();">Próximo</button>
-		</div>
+		<a href ng-click="finalizarPedido();">
+		 <img alt="Finalizar" border="0"
+		  src="resources/img/finalizar-pedido.png"
+		   title="Finalizar Pedido">
+		</a>
+		<h1>TOTAL: {{pedidoObjeto.valorTotal}}</h1>
+	
 	</div>
 </div>
 </html>
