--- a/AngularJS_Spring_MVC/WebContent/loja/online.html
+++ b/AngularJS_Spring_MVC/WebContent/loja/online.html
@@ -1,48 +1,49 @@
-<html ng-app="loja">
+<html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-
 <h1>Loja on-line de livros</h1>
 
-<br />
-<br />
-
-<a ng-click="fecharPedido();">{{carrinhoLivro.length}} Itens no Carrinho 
-	<img alt="Carrinho" title="Carrinho de livro" src="resources/img/cart.png" border="0" height="40px;" width="40px;">
+<br/>
+<br/>
+<a ng-click="fecharPedido();">{{carrinhoLivro.length}} Itens no Carrinho <img alt="Carrinho" title="Carrinho de Livro"
+	src="resources/img/cart.png" border="0" height="40px;" width="40px;">
 </a>
 
-<div class="col-lg-9 col-md-8" ng-init="listarLivros(1);">
+<br/>
+<br/>
+
+<div class="col-lg-12 col-md-8" ng-init="listarLivros(1);">
 	<div class="card">
 		<div class="content">
-			<form id="formLoja">			
+			<form id="formLivro">
 				<div class="row">
 					<div class="col-md-3" ng-repeat="livro in data">
 						<div class="form-group">
-							<label style="color: black;">{{livro.titulo}}</label>
-							<img alt="Foto de Capa" id="imagemLivro" src="{{livro.foto}}" style="width: 160px; height: 190px;" border="0">
-							<label onclick="mostrarDescricao(this.title);" title="{{livro.descricao}}">ver descrição</label>
-							<br>
-							<label style="color: blue;">{{livro.valor}}</label>
-							<br>
-							<button type="button" ng-click="addLivro(livro.id);" class="btn btn-info btn-fill btn-wd">Adiciona</button>
+						    <label style="color: black;">{{livro.titulo}}</label>
+							<img alt="Foto de Capa" id="imagemLivro" src="{{livro.foto}}"  style="width: 170px;height: 200px;" border="0">
+							<label onclick="mostrarDescricao(this.title)" title="{{livro.descricao}}">Ver Descrição</label>
+							<br/>
+							<label style="color: green;">{{livro.valor}}</label>
+							<br/>
+							<button type="button" ng-click="addLivro(livro.id);"  class="btn btn-info btn-fill btn-wd" >Adicionar</button>
 						</div>
 					</div>
-				</div>
+				</div>	
 			</form>
-			<br>
-			<br>
+			<br/>
+			<br/>
 			<div class="text-center">
-				<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="anterior();">Anterior</button>
-				<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="proximo();">Próximo</button>
-			</div>
-		</div>
+			   <button type="button" class="btn btn-info btn-fill btn-wd" ng-click="anterior();">Anterior</button>
+			   <button type="button" class="btn btn-info btn-fill btn-wd" ng-click="proximo();">Próximo</button>
+			</div>  
+		</div> 
 	</div>
-	<div id="descricaoLivro" title="Descrição resumida do livro">
-	</div>
+	<div id="descricaloLivro" title="Descrição resumida do livro" style="height: 200px; width: 400px;"></div>
 	<script type="text/javascript">
-		function mostrarDescricao(descricao){
-			$('#descricaoLivro').html("<p>"+descricao+"</p>").dialog({modal:true});
-		}
+			function mostrarDescricao(descricao) {
+				$('#descricaloLivro').html("<p>"+descricao+"</p").dialog({modal:true});
+			}
+	
 	</script>
 </html>
