--- a/AngularJS_Spring_MVC/WebContent/cliente/list.html
+++ b/AngularJS_Spring_MVC/WebContent/cliente/list.html
@@ -33,8 +33,7 @@
 			<tbody>
 				<tr ng-repeat="cliente in data | filter:filtro">
 					<td>{{cliente.id}}</td>
-					<td><img src="{{cliente.foto}}"
-						style="width: 40px; height: 43px;" /></td>
+					<td><img src="{{cliente.foto}}" style="width: 40px; height: 43px;" /></td>
 					<td>{{cliente.nome}}</td>
 					<td>{{cliente.endereco}}</td>
 					<td>{{cliente.telefone}}</td>
@@ -48,7 +47,7 @@
 			</tbody>
 		</table>
 		
-		<div class="text-center">
+		<div class="text-center" ng-hide="ocultarNavegacao">
 			<!-- Botão de paginação de clientes -->
 			<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="anterior();">Anterior</button>
 			<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="proximo();">Próximo</button>
