--- a/AngularJS_Spring_MVC/WebContent/fornecedor/list.html
+++ b/AngularJS_Spring_MVC/WebContent/fornecedor/list.html
@@ -52,7 +52,7 @@
 			</tbody>
 		</table>
 		
-		<div class="text-center">
+		<div class="text-center" ng-hide="ocultarNavegacao">
 			<!-- Botão de paginação de fornecedor -->
 			<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="anterior();">Anterior</button>
 			<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="proximo();">Próximo</button>
