--- a/AngularJS_Spring_MVC/WebContent/livro/list.html
+++ b/AngularJS_Spring_MVC/WebContent/livro/list.html
@@ -47,7 +47,7 @@
 			</tbody>
 		</table>
 		
-		<div class="text-center">
+		<div class="text-center" ng-hide="ocultarNavegacao">
 			<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="anterior();">Anterior</button>
 			<button type="button" class="btn btn-info btn-fill btn-wd" ng-click="proximo();">Próximo</button>
 		</div>
