--- a/AngularJS_Spring_MVC/WebContent/loja/pedidoconfirmado.html
+++ b/AngularJS_Spring_MVC/WebContent/loja/pedidoconfirmado.html
@@ -3,11 +3,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <div ng-controller="lojaController">
-
 	<div class="content table-responsive table-full-width">
 		<h1>Pedido Confirmado: {{codigoPedido}}</h1>
 		<a href="imprimirPedido/pedido/{{codigoPedido}}">
-		 <img alt="Imprimir" height="150px;" width="150" src="resources/img/pdf.png" title="Imprimir">
+		 <img alt="Imprimir" src="resources\img\pdf.png" title="Imprimir">
 		</a>
 	</div>
 </div>
